# adhoc-figment

./: .pre-commit-config.yaml  Cargo.toml  README.md  setup-dev-environment
.github/workflows/: ci.yml
src/: lib.rs
