[package]
name = "adhoc-figment"
authors = ["Person93 <person93.peron93@gmail.com"]
version = "0.1.1-dev"
edition = "2018"
repository = "https://github.com/Person-93/adhoc-figment"
description = "An ad hoc provider for figment"
readme = "README.md"
license = "MIT"
keywords = ["config", "configuration"]
categories = ["config"]

[dependencies]
figment = "0.10.6"

[dev-dependencies]
figment = { version = "0.10", features = ["toml"] }
